tests/fixtures/effect-compiler/errors/EFX3303.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      properties:
        roughness: { target: test.ry }
}%

CCProgram vs %{
  precision mediump float;
  uniform Test {
    vec4 test;
  };
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
